<resources>
    <string name="app_name">Beats</string>
    <string name="username">Nome de Usuário</string>
    <string name="password">Senha</string>
    <string name="sign_in">Entrar</string>
    <string name="adress">Endereço</string>
    <string name="phone">Telefone</string>
    <string name="email">E-mail</string>
    <string name="add_picture">Adicionar foto</string>
    <string name="save">Salvar</string>
    <string name="invalidUsername">Usuário inválido</string>
    <string name="invalidPassword">Senha inválida</string>
    <string name="map">Mapa</string>
</resources>
