<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/buttonAddFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-bold"
            android:layout_gravity="center"
            android:text="@string/add_picture"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/circle_big"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_add_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/white"
            android:layout_gravity="center">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextAddUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/username"
                android:maxLines="1"
                android:lines="1"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:imeOptions="actionNext" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_add_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/white"
            android:layout_gravity="center">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextAddEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/email"
                android:maxLines="1"
                android:lines="1"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:imeOptions="actionNext" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_add_endereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/white"
            android:layout_gravity="center">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextAddEndereco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/adress"
                android:maxLines="1"
                android:lines="1"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:imeOptions="actionNext" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_add_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/white"
            android:layout_gravity="center">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextAddTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/phone"
                android:maxLines="1"
                android:lines="1"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:imeOptions="actionNext" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/buttonCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:fontFamily="sans-serif-bold"
            android:layout_gravity="center"
            android:text="Salvar"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/roundedbutton"/>

    </LinearLayout>
</ScrollView>